--- a/AlkoApp/app/src/main/res/values/strings.xml
+++ b/AlkoApp/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="MenuName1">Alcohols</string>
     <string name="MenuName2">Drinks</string>
     <string name="MenuName3">Utils</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
