--- a/AlkoApp/app/src/main/res/values/strings.xml
+++ b/AlkoApp/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Your Gallery</string>
 
-    <string name="menu_tools">Tools</string>
+    <string name="menu_account">Account</string>
     <string name="menu_share">Share</string>
 
     <string name="menu_alcoshow">Show Alcohols</string>
