--- a/AlkoApp/app/src/main/res/values/strings.xml
+++ b/AlkoApp/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_register">Registration</string>
     <string name="menu_gallery">Your Gallery</string>
 
     <string name="menu_account">Account</string>
